--- a/062animation-script/062animation-script.csproj
+++ b/062animation-script/062animation-script.csproj
@@ -8,7 +8,7 @@
     <OutputType>WinExe</OutputType>
     <RootNamespace>_062animation_script</RootNamespace>
     <AssemblyName>062animation-script</AssemblyName>
-    <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <TargetFrameworkProfile />
@@ -182,6 +182,15 @@
     </Compile>
     <Compile Include="..\common\WorkloadDistributionDummy.cs">
       <Link>WorkloadDistributionDummy.cs</Link>
+    </Compile>
+    <Compile Include="..\newmodules\JosefPelikan-CatmullRomAnimator\CatmullRomAnimator.cs">
+      <Link>CatmullRomAnimator.cs</Link>
+    </Compile>
+    <Compile Include="..\newmodules\JosefPelikan-ChaoticParticles\ChaoticParticles.cs">
+      <Link>ChaoticParticles.cs</Link>
+    </Compile>
+    <Compile Include="..\newmodules\JosefPelikan-StarBackground\StarBackground.cs">
+      <Link>StarBackground.cs</Link>
     </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
